--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="container">
         <div class="sectionOne">
+            <h1>Eka's school</h1>
             <img src="assets/icons/logo.svg" alt="logo" class="logo">
             <input type="password" name="key" id="key" placeholder="insert key">
             <input type="submit" value="Gain access" id="submit" onclick="validate()">
