--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
         <div class="container">
             <img src="assets/icons/logo.svg" alt="logo" class="logo">
 
-            <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search PDF here..." title="Find pdf here..." class="search">
+            <input type="text" id="myInput" onkeyup="myFunction()" placeholder="what're we looking for?" title="Search PDF here..." class="search">
             <a href="#" class="contact">Contact</a>
             <div class="dark-mode">
                 <input type="checkbox" class="form-check-input" id="darkSwitch" title="Dark Mode">
