--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
     </div>
 
     <script src="assets/script/login.js"></script>
+    <script src="assets/script/darkmode.js"></script>
 </body>
 </html>
