--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="sectionTwo"></div>
     </div>
-
+    <input type="checkbox" class="form-check-input" id="darkSwitch" title="Dark Mode" style="opacity: 0;">
     <script src="assets/script/login.js"></script>
     <script src="assets/script/darkmode.js"></script>
 </body>
