--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="assets/icons/site-icon.png">
     <link rel="stylesheet" href="assets/styles/default.css">
     <link rel="stylesheet" href="assets/styles/main.css">
+    <link rel="stylesheet" href="assets/styles/covers.css">
 </head>
 <body>
     <header>
@@ -26,31 +27,31 @@
             <div class="collumnOne">
                 <li>
                     <div class="pdfBox">
-                        <div class="cover"></div>
-                        <button>Download PDF</button>
+                        <div class="cover dixson"></div>
+                        <button onclick="window.location.href='pdfs/Dixon-beginning.docx';">Download PDF</button>
                     </div>
-                    <a>წითელი ბჯ, witeli, red, bj</a>
+                    <a name="tags">დიქსონი, dixoni, diqsoni, dixson</a>
                 </li>
                 <li>
                     <div class="pdfBox">
-                        <div class="cover"></div>
-                        <button>Download PDF</button>
+                        <div class="cover destinationB2"></div>
+                        <button onclick="window.location.href='pdfs/Destination-B2-words-pdf.io-1.pdf';">Download PDF</button>
                     </div>
-                    <a>ლურჯი ბჯ, witeli, red, bj</a>
+                    <a name="tags">Destination B2 დესთინეიშენი</a>
                 </li>
                 <li>
                     <div class="pdfBox">
-                        <div class="cover"></div>
-                        <button>Download PDF</button>
+                        <div class="cover words1100"></div>
+                        <button onclick="window.location.href='pdfs/1100-Words.docx';">Download PDF</button>
                     </div>
-                    <a>ყვითელი ბჯ, witeli, red, bj</a>
+                    <a name="tags">1100 words you need know</a>
                 </li>
                 <li>
                     <div class="pdfBox">
-                        <div class="cover"></div>
-                        <button>Download PDF</button>
+                        <div class="cover bj-yl"></div>
+                        <button onclick="window.location.href='pdfs/bj-yellow-intermediate.docx';">Download PDF</button>
                     </div>
-                    <a>მწვანე ბჯ, witeli, red, bj</a>
+                    <a name="tags">ყვითელი ბჯ yviteli yellow bj</a>
                 </li>
             </div>
             <div class="collumnTwo">
