--- a/main.html
+++ b/main.html
@@ -58,11 +58,11 @@
                 <li>
                     <div class="pdfBox">
                         <div class="cover"></div>
-                        <button>Download PDF</button>
+                        <button  onclick="window.open('pdfs/college-essays.pdf');">Download PDF</button>
                     </div>
-                    <a>დიქსონი, dixoni, diqsoni, dixson</a>
+                    <a>collage essays კოლეჯის ესეები</a>
                 </li>
-                <li>
+                <!-- <li>
                     <div class="pdfBox">
                         <div class="cover"></div>
                         <button>Download PDF</button>
@@ -82,7 +82,7 @@
                         <button>Download PDF</button>
                     </div>
                     <a>მწვანე ბჯ, witeli, red, bj</a>
-                </li>
+                </li> -->
             </div>
         </ul>
     </div>
