--- a/main.html
+++ b/main.html
@@ -35,7 +35,7 @@
                 <li>
                     <div class="pdfBox">
                         <div class="cover destinationB2"></div>
-                        <button onclick="window.location.href='pdfs/Destination-B2-words-pdf.io-1.pdf';">Download PDF</button>
+                        <button onclick="window.open('pdfs/Destination-B2-words-pdf.io-1.pdf');">Download PDF</button>
                     </div>
                     <a name="tags">Destination B2 დესთინეიშენი</a>
                 </li>
