--- a/main.html
+++ b/main.html
@@ -57,7 +57,7 @@
             <div class="collumnTwo">
                 <li>
                     <div class="pdfBox">
-                        <div class="cover"></div>
+                        <div class="cover collageEssays"></div>
                         <button  onclick="window.open('pdfs/college-essays.pdf');">Download PDF</button>
                     </div>
                     <a>collage essays კოლეჯის ესეები</a>
