--- a/main.html
+++ b/main.html
@@ -97,7 +97,7 @@
                     <input type="text" placeholder="your name..." class="name" name="name" required="">
                     <input type="text" placeholder="your email..." class="email" name="email" required="">
                     <textarea type="text" placeholder="is there anything that you want to tell me?" class="subject" name="message" required=""></textarea>
-                    <input type="submit" value="now send it ツ" id="contactBtn">
+                    <input type="submit" value="okay send it ツ" id="contactBtn">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_subject" value="From EDU-EKA website!!">
                     <input type="hidden" name="_next" value="https://www.edu-eka.tk/">
