--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
     <div class="space"></div>
     <div class="container">
         <ul id="myUL">
-            <div class="collumnOne">
+            <div class="collumn">
                 <li>
                     <div class="pdfBox">
                         <div class="cover dixson"></div>
@@ -56,7 +56,7 @@
                     <a name="tags">ყვითელი ბჯ yviteli yellow bj</a>
                 </li>
             </div>
-            <div class="collumnTwo">
+            <div class="collumn">
                 <li>
                     <div class="pdfBox">
                         <div class="cover collageEssays"></div>
