--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
                 <li>
                     <div class="pdfBox">
                         <div class="cover dixson"></div>
-                        <button onclick="window.location.href='pdfs/Dixon-beginning.docx';">Download PDF</button>
+                        <button onclick="window.location.href='pdfs/Dixson.docx';">Download PDF</button>
                     </div>
                     <a name="tags">დიქსონი, dixoni, diqsoni, dixson</a>
                 </li>
