--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
                 <li>
                     <div class="pdfBox">
                         <div class="cover bj-yl"></div>
-                        <button onclick="window.location.href='pdfs/bj-yellow-intermediate.docx';">Download PDF</button>
+                        <button onclick="window.location.href='pdfs/B.-J.-Thomas.-Intermediate.docx';">Download PDF</button>
                     </div>
                     <a name="tags">ყვითელი ბჯ yviteli yellow bj</a>
                 </li>
