--- a/main.html
+++ b/main.html
@@ -64,14 +64,14 @@
                     </div>
                     <a>collage essays კოლეჯის ესეები</a>
                 </li>
-                <!-- <li>
+                <li>
                     <div class="pdfBox">
-                        <div class="cover"></div>
+                        <div class="cover oxford-advanced"></div>
                         <button>Download PDF</button>
                     </div>
-                    <a>ლურჯი ბჯ, witeli, red, bj</a>
+                    <a>Oxford word skills advanced ოქსფორდი</a>
                 </li>
-                <li>
+                <!-- <li>
                     <div class="pdfBox">
                         <div class="cover"></div>
                         <button>Download PDF</button>
